--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,12 @@
 * {
+  scroll-behavior: smooth;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 :root {
   --scrollTop: var(--scrollTop);
-
+  --text: #9e7d35;
   --index: calc(1vw + 1vh);
 }
 @font-face {
@@ -51,9 +52,7 @@ body {
   background-position: center;
   will-change: transform;
 }
-.main-section {
-  min-height: 100vh;
-}
+
 .layers__base {
   transform: translate3d(0, calc(var(--scrollTop) / 2), 0);
   z-index: 0;
@@ -76,7 +75,7 @@ body {
   font-weight: 900;
   margin-bottom: calc(var(--index) * 8);
   color: #e7e6e0;
-  text-shadow: 0 0 15px #9e7d35;
+  text-shadow: 0 0 15px var(--text);
 }
 .layers__title {
   font-size: calc(var(--index) * 2.5);
@@ -86,4 +85,40 @@ body {
 .layers__caption {
   font-size: calc(var(--index) * 1.2);
   letter-spacing: calc(var(--index) / 3.5);
+}
+.main-section {
+  position: relative;
+  color: #e7e6e0;
+  text-shadow: 0 0 15px var(--text);
+  min-height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: translate3d(0, calc(var(--scrollTop) / -4.5), 0);
+}
+.main-section__content {
+  text-transform: uppercase;
+}
+.main-section__header {
+  font-size: calc(var(--index) * 1.5);
+  margin-bottom: 20px;
+  letter-spacing: calc(var(--index) / 6);
+  transform: translate3d(0, calc(var(--scrollTop) / 7), 0);
+  will-change: transform;
+}
+.main-section__content li {
+  max-width: 50%;
+  margin-top: calc(var(--index) * 0.3);
+  transform: translate3d(0, calc(var(--scrollTop) / 7), 0);
+  will-change: transform;
+}
+.copy {
+  position: absolute;
+  bottom: -100px;
+  font-size: calc(var(--index) * 0.75);
 }
